add documentation for future self

--- a/Actor Critic.ipynb
+++ b/Actor Critic.ipynb
@@ -27,8 +27,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Define the Agent class\n",
     "class Agent:\n",
     "    def __init__(self, actor_lr, critic_lr, discount_factor=0.99, n_actions=2):\n",
+    "        # Initialize the agent with learning rates, discount factor, and number of actions\n",
     "        self.actor_lr = actor_lr\n",
     "        self.critic_lr = critic_lr\n",
     "        self.discount_factor = discount_factor\n",
@@ -39,6 +41,7 @@
     "        self.action_space = [i for i in range(self.n_actions)]\n",
     "        \n",
     "    def build_actor_network(self):\n",
+    "        # Define the actor network architecture\n",
     "        visible = layers.Input(shape=(10,2))\n",
     "        flatten = layers.Flatten()(visible)\n",
     "        layer = layers.Dense(64, activation='relu')(flatten)\n",
@@ -48,13 +51,15 @@
     "        probs = layers.Dense(self.n_actions, activation='softmax')(layer)\n",
     "        \n",
     "        model = keras.Model(inputs=visible, outputs=probs)\n",
-    "        \n",
+    "\n",
+    "        # Define the custom loss function for the actor network\n",
     "        def loss(model, x, y_true, delta):\n",
     "            y_pred = model(x)\n",
     "            out = K.clip(y_pred, 1e-8, 1-1e-8)\n",
     "            log_likelihood = y_true * K.log(out)\n",
     "            return K.sum(-log_likelihood * delta)\n",
     "            \n",
+    "        # Define the gradient calculation for the actor network\n",
     "        def grad(model, inputs, targets, delta):\n",
     "            with tf.GradientTape() as tape:\n",
     "                loss_value = loss(model, inputs, targets, delta)\n",
@@ -63,6 +68,7 @@
     "        return model, grad\n",
     "    \n",
     "    def build_critic_network(self):\n",
+    "        # Define the critic network architecture\n",
     "        visible = keras.Input(shape=(10,2))\n",
     "        flatten = layers.Flatten()(visible)\n",
     "        layer = layers.Dense(64, activation='relu')(flatten)\n",
@@ -83,7 +89,8 @@
     "        dense2 = layers.Dense(64, activation='relu')(dense1)\n",
     "        probs = layers.Dense(self.n_actions, activation='softmax')(dense2)\n",
     "        values = layers.Dense(1, activation='linear')(dense2)\n",
-    "        \n",
+    "\n",
+    "        # Define the custom loss function for the actor network\n",
     "        def custom_loss(y_true, y_pred):\n",
     "            out = K.clip(y_pred, 1e-8, 1-1e-8)\n",
     "            log_likelihood = y_true * K.log(out)\n",
@@ -97,6 +104,7 @@
     "        policy = keras.Model(inputs=[visible], outputs=[probs])\n",
     "        return actor, critic, policy\n",
     "    def choose_action(self, observation):\n",
+    "        # Choose an action based on the current policy\n",
     "        state = observation[np.newaxis, :]\n",
     "        probabilities = self.actor.predict(state)[0]\n",
     "        action = np.random.choice(self.action_space, p=probabilities)\n",
@@ -104,6 +112,7 @@
     "        return action\n",
     "    \n",
     "    def learn(self, state, action, reward, state2, done):\n",
+    "        # Update the actor and critic networks based on the observed transition\n",
     "        state = state[np.newaxis, :]\n",
     "        state2 = state2[np.newaxis, :]\n",
     "        critic_value = self.critic.predict(state)\n",
@@ -146,10 +155,13 @@
     }
    ],
    "source": [
+    "# Initialize the Forex trading environment and the agent\n",
     "env = gym.make('forex-v0', frame_bound=(50, 2000), window_size=10)\n",
     "agent = Agent(actor_lr = 0.002, critic_lr = 0.002)\n",
     "observation = env.reset()\n",
     "done = False\n",
+    "\n",
+    "# Run the agent in the environment\n",
     "while not done:\n",
     "    action = agent.choose_action(observation)\n",
     "    observation2, reward, done, info = env.step(action)\n",
@@ -177,7 +189,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "d:\\tech\\mtech\\sls\\project\\env\\lib\\site-packages\\gym\\logger.py:30: UserWarning: \u001b[33mWARN: Box bound precision lowered by casting to float32\u001b[0m\n",
+      "d:\\tech\\mtech\\sls\\project\\env\\lib\\site-packages\\gym\\logger.py:30: UserWarning: \u001B[33mWARN: Box bound precision lowered by casting to float32\u001B[0m\n",
       "  warnings.warn(colorize('%s: %s'%('WARN', msg % args), 'yellow'))\n"
      ]
     },
