--- a/DQN.ipynb
+++ b/DQN.ipynb
@@ -55,6 +55,7 @@
     }
    ],
    "source": [
+    "# Define a function to create the model\n",
     "def getModel():\n",
     "    visible = keras.Input(shape=(10,2))\n",
     "    layer = layers.Flatten()(visible)\n",
@@ -90,6 +91,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# DataFrame to log loss values\n",
     "logging_loss_df = pd.DataFrame(columns =['loss'])\n"
    ]
   },
@@ -99,12 +101,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
+    "# Define the training function\n",
     "def train(environment):\n",
+    "    \n",
     "    model = getModel()\n",
     "    adam = keras.optimizers.Adam(learning_rate=LEARNING_RATE)\n",
     "    model.compile(loss='mse', optimizer=adam)\n",
-    "    \n",
+    "\n",
+    "    # List to store state-action-state2-return tuples\n",
     "    state_action_state2_return = []\n",
     "    \n",
     "    observation = environment.reset()\n",
@@ -114,6 +118,7 @@
     "        Q_sa = 0\n",
     "        current_state = observation\n",
     "        action_list = np.zeros([2])\n",
+    "        # Calculate epsilon for exploration-exploitation trade-off\n",
     "        epsilon = EPSILON_MAX - (EPSILON_MAX-EPSILON_MIN) *max(float(t)/EPSILON_T_TO_MIN, 1)\n",
     "        if random.random() <= epsilon: # explore\n",
     "            act = env.action_space.sample()\n",
@@ -121,9 +126,11 @@
     "        else:\n",
     "            act = np.argmax(model.predict(current_state.reshape(1, 10, 2))[0])\n",
     "            action_list[act] = 1\n",
-    "        \n",
+    "\n",
+    "        # Take action and observe the next state and reward\n",
     "        observation, reward, done, info = environment.step(act)\n",
     "        if len(state_action_state2_return) >= BATCH_SIZE:\n",
+    "            # Sample a batch of experiences\n",
     "            batch = random.sample(state_action_state2_return, BATCH_SIZE)\n",
     "            inputs = np.zeros((len(batch), 10, 2))\n",
     "            targets = np.zeros((len(batch), 2))\n",
@@ -136,6 +143,7 @@
     "                terminal = batch[i][4]\n",
     "\n",
     "                inputs[i:i+1] = state\n",
+    "                # Update the target for the action taken\n",
     "                targets[i], Q_sa = model.predict(np.array([state, state2]))\n",
     "                \n",
     "                if terminal: \n",
@@ -145,9 +153,11 @@
     "        \n",
     "            inputs_tensor = tf.convert_to_tensor(inputs)\n",
     "            targets_tensor = tf.convert_to_tensor(targets)\n",
+    "            # Train the model on the batch\n",
     "            loss = model.train_on_batch(inputs_tensor, targets_tensor)\n",
     "            logging_loss_df.loc[len(logging_loss_df)] = loss\n",
     "        \n",
+    "        # Store the experience\n",
     "        state_action_state2_return.append((current_state, act, reward, observation, done))\n",
     "        t += 1\n",
     "        if t % 100 == 0:\n",
@@ -167,7 +177,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "d:\\tech\\mtech\\sls\\project\\env\\lib\\site-packages\\gym\\logger.py:30: UserWarning: \u001b[33mWARN: Box bound precision lowered by casting to float32\u001b[0m\n",
+      "d:\\tech\\mtech\\sls\\project\\env\\lib\\site-packages\\gym\\logger.py:30: UserWarning: \u001B[33mWARN: Box bound precision lowered by casting to float32\u001B[0m\n",
       "  warnings.warn(colorize('%s: %s'%('WARN', msg % args), 'yellow'))\n"
      ]
     },
@@ -263,7 +273,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "d:\\tech\\mtech\\sls\\project\\env\\lib\\site-packages\\gym\\logger.py:30: UserWarning: \u001b[33mWARN: Box bound precision lowered by casting to float32\u001b[0m\n",
+      "d:\\tech\\mtech\\sls\\project\\env\\lib\\site-packages\\gym\\logger.py:30: UserWarning: \u001B[33mWARN: Box bound precision lowered by casting to float32\u001B[0m\n",
       "  warnings.warn(colorize('%s: %s'%('WARN', msg % args), 'yellow'))\n"
      ]
     },
